tests/baselines/reference/declarationMapsWithoutDeclaration.errors.txt
error TS5069: Option 'declarationMap' cannot be specified without specifying option 'declaration' or option 'composite'.
declarationMapsWithoutDeclaration.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


!!! error TS5069: Option 'declarationMap' cannot be specified without specifying option 'declaration' or option 'composite'.
==== declarationMapsWithoutDeclaration.ts (1 errors) ====
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    var m2: {
        (): m2.connectExport;
        test1: m2.connectModule;
        test2(): m2.connectModule;
    };
    
    export = m2;